commit : notification ajout mot-cle fait OK

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/ImageLaunch.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.11.jar=src/lib/controlsfx-8.40.11.jar
 file.reference.jackson-annotations-2.9.4.jar=src/lib/jackson-annotations-2.9.4.jar
 file.reference.jackson-core-2.9.4.jar=src/lib/jackson-core-2.9.4.jar
 file.reference.jackson-databind-2.9.4.jar=src/lib/jackson-databind-2.9.4.jar
@@ -42,7 +43,8 @@ javac.classpath=\
     ${file.reference.json-simple-1.1.jar}:\
     ${file.reference.jackson-annotations-2.9.4.jar}:\
     ${file.reference.jackson-core-2.9.4.jar}:\
-    ${file.reference.jackson-databind-2.9.4.jar}
+    ${file.reference.jackson-databind-2.9.4.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
